--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,15 @@
 steps:
-- name: "docker"
+- name: "gcr.io/cloud-builders/docker"
   args: ["build", "-t", "gcr.io/$PROJECT_ID/gcpdevops", "."]
-images:
-- "gcr.io/$PROJECT_ID/gcpdevops"
+- name: "gcr.io/cloud-builders/docker"
+  args: ["push", "gcr.io/$PROJECT_ID/gcpdevops"]
+- name: "gcr.io/cloud-builders/gke-deploy"
+  args:
+  - run
+  - --filename=gke.yaml
+  - --image=gcr.io/$PROJECT_ID/gcpdevops
+  - --location=us-central1-a
+  - --cluster=gcp-devops-project
+  - --namespace=gcp-devops-prod
 options:
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
