--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,15 +1,15 @@
 steps:
 - name: "gcr.io/cloud-builders/docker"
-  args: ["build", "-t", "gcr.io/$PROJECT_ID/gcpdevops", "."]
+  args: ["build", "-t", "gcr.io/$PROJECT_ID/gcpdevops-dev", "."]
 - name: "gcr.io/cloud-builders/docker"
-  args: ["push", "gcr.io/$PROJECT_ID/gcpdevops"]
+  args: ["push", "gcr.io/$PROJECT_ID/gcpdevops-dev"]
 - name: "gcr.io/cloud-builders/gke-deploy"
   args:
   - run
   - --filename=gke.yaml
-  - --image=gcr.io/$PROJECT_ID/gcpdevops
+  - --image=gcr.io/$PROJECT_ID/gcpdevops-dev
   - --location=us-central1-a
   - --cluster=gcp-devops-project
-  - --namespace=gcp-devops-prod
+  - --namespace=gcp-devops-dev
 options:
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
